--- a/src/assets/locales/it.json
+++ b/src/assets/locales/it.json
@@ -17,7 +17,7 @@
     "title": "Su di sudo-flix (^▽^)",
     "q4": {
       "title": "E i miei dati?",
-      "body": "Tutti i dati vengono sincronizzati con il back-end sudo che è diverso dal back-end della community ed è ospitato in modo indipendente da me, chiunque è libero di utilizzare anche questo."
+      "body": "Tutti i dati vengono sincronizzati con il back-end di leaf"
     },
     "q5": {
       "body": "be', sudo-flix ha un account Twitter che può essere trovato nel fondo della pagina insieme ad un link al codice sorgente su Github.",
